# HJMedia

./: .gitignore  AGENTS.md  CLAUDE.md  CMakePresets.json
docs/: Readme_MusicPlayer.md
docs/architecture/: HJGraphMusicPlayer.md  HJGraphMusicPlayer_AudioContextGuide.md
src/plugins/: HJPlugin.cpp
src/plugins/doc/: HJPlugin.md
study/: 00-four-week-study-outline.md  4周学习计划大纲.md  week1-music-player-practice.md  week2-thread-plugin-player-practice.md  week3-pusher-codec-rtmp-practice.md  week4-interview-job-ready-practice.md  第1周学习计划.md
studyDemo/: CMakeLists.txt  README.md  day01_project_map.cpp  day02_raii_demo.cpp  day02_smart_pointer_raii.cpp  day02_smart_ptr_demo.cpp  day03_music_player_pipeline.cpp  day04_graph_music_player_assembly.cpp  day05_bounded_frame_queue.cpp  day06_audio_plugin_chain.cpp  day07_week1_review.cpp  day08_task_queue_handler.cpp  day09_weak_task_teardown.cpp  day10_plugin_lifecycle_logging.cpp  day11_player_graph_compare.cpp  day12_video_drop_policy.cpp  day13_seek_flush_eof_debug.cpp  day14_async_review.cpp  day15_pusher_graph.cpp  day16_pcm_aac_frame_calc.cpp  day17_video_codec_headers.cpp  day18_av_interleave.cpp  day19_network_backpressure.cpp  day20_render_inference_overview.cpp  day21_pusher_review.cpp  day22_star_project_point.cpp  day23_resume_description.cpp  day24_interview_question_bank.cpp  day25_debug_playbook_part1.cpp  day26_debug_playbook_part2.cpp  day27_mock_interview.cpp  day28_job_ready_package.cpp  study_demo_common.h
studyDemo/standaloneAudioPlayer/: CMakeLists.txt  README.md  build_mingw.bat  run_mingw.bat
studyDemo/standaloneAudioPlayer/src/: main.cpp
studyNote/: 08-hjthread-model.md  09-thread-teardown-risk.md  10-plugin-lifecycle-log-design.md  11-player-graphs-compare.md  12-video-dropping-practice.md  HJLooperThread-explained.md  cmake-architecture-notes.md  week1-music-player-notes.md  week2-thread-plugin-player-notes.md  week3-pusher-codec-rtmp-notes.md  week4-interview-job-ready-notes.md  第1周学习笔记.md
