cmake_minimum_required(VERSION 3.20)

project(HJMediaStudyDemo LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(Threads REQUIRED)

function(add_study_demo target source)
    add_executable(${target} ${source})
    target_include_directories(${target} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
    target_link_libraries(${target} PRIVATE Threads::Threads)
    if(MSVC)
        target_compile_options(${target} PRIVATE /W4 /permissive-)
    else()
        target_compile_options(${target} PRIVATE -Wall -Wextra -Wpedantic)
    endif()
endfunction()

add_study_demo(day01_project_map day01_project_map.cpp)
add_study_demo(day02_smart_pointer_raii day02_smart_pointer_raii.cpp)
add_study_demo(day03_music_player_pipeline day03_music_player_pipeline.cpp)
add_study_demo(day04_graph_music_player_assembly day04_graph_music_player_assembly.cpp)
add_study_demo(day05_bounded_frame_queue day05_bounded_frame_queue.cpp)
add_study_demo(day06_audio_plugin_chain day06_audio_plugin_chain.cpp)
add_study_demo(day07_week1_review day07_week1_review.cpp)
add_study_demo(day08_task_queue_handler day08_task_queue_handler.cpp)
add_study_demo(day09_weak_task_teardown day09_weak_task_teardown.cpp)
add_study_demo(day10_plugin_lifecycle_logging day10_plugin_lifecycle_logging.cpp)
add_study_demo(day11_player_graph_compare day11_player_graph_compare.cpp)
add_study_demo(day12_video_drop_policy day12_video_drop_policy.cpp)
add_study_demo(day13_seek_flush_eof_debug day13_seek_flush_eof_debug.cpp)
add_study_demo(day14_async_review day14_async_review.cpp)
add_study_demo(day15_pusher_graph day15_pusher_graph.cpp)
add_study_demo(day16_pcm_aac_frame_calc day16_pcm_aac_frame_calc.cpp)
add_study_demo(day17_video_codec_headers day17_video_codec_headers.cpp)
add_study_demo(day18_av_interleave day18_av_interleave.cpp)
add_study_demo(day19_network_backpressure day19_network_backpressure.cpp)
add_study_demo(day20_render_inference_overview day20_render_inference_overview.cpp)
add_study_demo(day21_pusher_review day21_pusher_review.cpp)
add_study_demo(day22_star_project_point day22_star_project_point.cpp)
add_study_demo(day23_resume_description day23_resume_description.cpp)
add_study_demo(day24_interview_question_bank day24_interview_question_bank.cpp)
add_study_demo(day25_debug_playbook_part1 day25_debug_playbook_part1.cpp)
add_study_demo(day26_debug_playbook_part2 day26_debug_playbook_part2.cpp)
add_study_demo(day27_mock_interview day27_mock_interview.cpp)
add_study_demo(day28_job_ready_package day28_job_ready_package.cpp)
